fix: update missing color override for empty dashboard widget

--- a/theme_kibanafeel.css
+++ b/theme_kibanafeel.css
@@ -1,7 +1,7 @@
 /*
 Kibanafeel - Kibana-Inspired Dark Theme for LibreNMS
 
-Copyright (c) Winston Astrachan 2020
+Copyright (c) Winston Astrachan 2022
 Released under the terms of the MIT license
 */
 
@@ -205,7 +205,7 @@ nav.navbar-default .navbar-nav>li>a:focus {
 }
 
 
-/* Nave Tabs */
+/* Nav Tabs */
 .nav-tabs {
     border-bottom-color: var(--color-dark4);
 }
@@ -239,6 +239,10 @@ nav.navbar-default .navbar-nav>li>a:focus {
 
 .gridster header.widget_header {
     background-color: var(--color-dark3);
+}
+
+.gridster .widget_body {
+    color: var(--color-light1);
 }
 
 
